assets/css/cutter.css
.image-cutter {
    width: 100%;
    position: relative;
    overflow: hidden;
}

.image-cutter .icon-flipped {
    transform: scaleX(-1);
    -moz-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    -ms-transform: scaleX(-1);
}

.image-cutter input[type=file] {
    display: none;
}

.image-cutter .dropzone {
    border: 2px dashed #3c8dbc;
    background: #fff;
    min-height: 250px;
    width: 100%;
    cursor: pointer;
    display: flex;
    text-align: center;
    position: relative;
    padding: 1px;
}

.image-cutter .dropzone .img-container .helper {
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}

.image-cutter .dropzone .img-container .message {
    color: #333;
    font-size: 20px;
    text-align: center;
    font-weight: 400;
    position: absolute;
    width: 100%;
    padding: 0 5%;
    top: 50%;
    margin-top: -36px;
}

.image-cutter .dropzone .img-container .preview-image {
    max-height: 100%;
    max-width: 100%;
    width: 100%;
    vertical-align: middle;
}

